# mysqldump-filter-rs

./: .gitignore  .release-it.json  CHANGELOG.md  Cargo.toml  README.md  package.json
.github/workflows/: release-artifacts.yml
src/: main.rs
